# machine-learning-fundamentals

./: pyproject.toml
AI Academy ML Fundamentals/: Lab0_6_7_8_9_12_13_Logistic_Regression_in ScikitLearn.ipynb  Lab10_Logistic_Regression_overfitting.ipynb  Lab11_Logistic_Regression_regularization.ipynb  Lab1_Why_does_regression_does_not_work.ipynb  Lab2_Why_is_logistic_regression_a_better_choice.ipynb  Lab3_Intro_sigmoid_function.ipynb  Lab4_Intro_sigmoid_with_log_likelihood.ipynb  Lab5_Logistic_Regression_Gradient_Descent.ipynb
